# NeverWrite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Copyright.md  ETHICS.md  README.md
.github/: FUNDING.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  electron-package-smoke.yml  release-desktop.yml  validate-release-metadata.yml
apps/desktop/: electron-builder.config.mjs  package-lock.json  package.json
apps/desktop/config/: desktop-security.json
apps/desktop/e2e/: playwright.config.ts  tsconfig.json  vite.harness.config.ts
apps/desktop/native-backend/: Cargo.toml
apps/desktop/native-backend/src/: ai.rs  devtools.rs  main.rs
apps/desktop/scripts/: build-electron-release.mjs  electron-builder-config.test.mjs  smoke-electron-ai-runtime.mjs  smoke-packaged-app.mjs  smoke-packaged-sidecar.mjs  stage-electron-release-assets.mjs  stage-electron-release-assets.test.mjs  stage-electron-sidecar.mjs  validate-linux-rpm-package.mjs  verify-electron-bundle.mjs
apps/desktop/src/: App.noteWindow.test.tsx  App.tsx  index.css  main.tsx
apps/web-clipper/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/ai/: Cargo.toml
crates/ai/src/: domain.rs  events.rs  persistence.rs  tool_diffs.rs
crates/diff/src/: lib.rs
crates/types/src/: dto.rs  (+1 more)
docs/: README.md  ai-change-control.md  ai-runtime-setup.md  ai-session-history.md  app-logs.md  data-and-privacy.md  deep-links.md  editor-architecture.md  okf.md  project-architecture.md  review-hardening-checklist.md  settings-scope.md  terminal-followups.md  terminal-integration.md  testing.md  troubleshooting.md
docs/concept-maps/: codex-subagents-working-state-map.excalidraw
release/appcast/: README.md
release/apt/: README.md
release/dnf/: README.md
scripts/: appcast-lib.mjs  appcast.test.mjs  apt-repo-lib.mjs  apt-repo.test.mjs  build-apt-repository.mjs  build-dnf-repository.mjs  dnf-repo-lib.mjs  dnf-repo.test.mjs  electron-release-lib.mjs  platform-validation-lib.mjs  platform-validation.test.mjs  release-assets-lib.mjs  release-assets.test.mjs  release-metadata-lib.mjs  release-metadata.test.mjs  sign-apt-repository.mjs  sign-dnf-repository.mjs  sign-rpm-packages.mjs  validate-apt-repository.mjs  validate-dnf-repository.mjs
(+257 files in other folders)
