[package]
name = "neverwrite-native-backend"
version = "0.3.1"
edition = "2021"

[dependencies]
agent-client-protocol = { version = "=0.12.1", features = ["unstable"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-async-persistent", "async-io", "crypto-rust"] }
neverwrite-diff = { path = "../../../crates/diff" }
neverwrite-ai = { path = "../../../crates/ai" }
neverwrite-index = { path = "../../../crates/index" }
neverwrite-types = { path = "../../../crates/types" }
neverwrite-vault = { path = "../../../crates/vault" }
notify = "7"
portable-pty = "0.9.0"
reqwest = { version = "0.13.2", features = ["blocking", "rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
spellbook = "0.4.0"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3"
